# oobe-automation

./: CMakeLists.linux.txt  CMakeLists.txt  README.md  ai_test.py  automation-server.py  data.yaml  microcontroller-server.py  oobe.py  train.py
include/nn/: autobackend.h
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
runs/detect/train6/: args.yaml  results.csv
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
